--- a/jaxrs/examples/oreilly-jaxrs-2.0-workbook/ex03_1/pom.xml
+++ b/jaxrs/examples/oreilly-jaxrs-2.0-workbook/ex03_1/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <groupId>com.oreilly.rest.workbook</groupId>
         <artifactId>jaxrs-2.0-workbook-pom</artifactId>
@@ -20,22 +20,22 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
-            <version>3.0.14.Final-SNAPSHOT</version>
+            <version>3.0.11.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
-            <version>3.0.14.Final-SNAPSHOT</version>
+            <version>3.0.11.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>async-http-servlet-3.0</artifactId>
-            <version>3.0.14.Final-SNAPSHOT</version>
+            <version>3.0.11.Final</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-servlet-initializer</artifactId>
-            <version>3.0.14.Final-SNAPSHOT</version>
+            <version>3.0.11.Final</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
@@ -115,6 +115,11 @@
                 <configuration>
                     <skip>true</skip>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.1.0.Alpha4</version>
             </plugin>
         </plugins>
     </build>
