--- a/jaxrs/examples/oreilly-jaxrs-2.0-workbook/pom.xml
+++ b/jaxrs/examples/oreilly-jaxrs-2.0-workbook/pom.xml
@@ -44,6 +44,11 @@ pom.xml as a template -->
                     <skip>true</skip>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.1.0.Alpha4</version>
+            </plugin>
         </plugins>
     </build>
 
